--- a/src/sass/partials/base/_base.scss
+++ b/src/sass/partials/base/_base.scss
@@ -27,3 +27,10 @@ legend {
 ul {
 	list-style: none;
 }
+
+.App {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
